syntax = "proto3";

package users;

option go_package = "./proto";

service UserService {
    rpc GetUserInfo (UserRequest) returns (UserResponse);
    rpc GetAllUsers (Empty) returns (UsersList);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message UpdateUserRequest {
    int32 user_id = 1;
    string name = 2;
    string email = 3;
    bool is_active = 4;
}

message UpdateUserResponse {
    bool success = 1;
}
message UserRequest {
    string user_id = 1;
}

message UserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
    bool is_active = 4;
}

message UsersList {
    repeated UserResponse users = 1;
}

message Empty {}
